[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "fast-finrl"
version = "0.1.0"
description = "High-performance C++ implementation of FinRL StockTradingEnv"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FastFinRL Contributors"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["reinforcement-learning", "trading", "finrl", "finance"]

[project.urls]
Homepage = "https://github.com/yourusername/fast_finrl"
Repository = "https://github.com/yourusername/fast_finrl"

[tool.scikit-build]
cmake.version = ">=3.22"
cmake.build-type = "Release"
wheel.packages = ["python/fast_finrl"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.cibuildwheel]
# Skip PyPy and musllinux (no TBB support)
skip = ["pp*", "*-musllinux_*"]

# Test the built wheels
test-command = "python -c \"from fast_finrl_py import FastFinRL; print('Import OK')\""

[tool.cibuildwheel.linux]
# Install TBB before building
before-all = "yum install -y tbb-devel || apt-get update && apt-get install -y libtbb-dev"
# Use manylinux2014 for C++17/23 support
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
# Install TBB via Homebrew
before-all = "brew install tbb"
# Build for both Intel and Apple Silicon
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
# Install TBB via vcpkg
before-all = "vcpkg install tbb:x64-windows"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake" }
